c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/scalar_required/not_struct.c
struct s {
    int a;
};

int main(void) {
    struct s x = {1};
    return !x;  // can only apply boolean operators to scalars, not structs
}